@@ -7,11 +7,11 @@
 package com.ibm.fhir.client.impl;
 
 import java.io.IOException;
+import java.util.Base64;
 
 import javax.ws.rs.client.ClientRequestContext;
 import javax.ws.rs.client.ClientRequestFilter;
 import javax.ws.rs.core.MultivaluedMap;
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * This class is responsible for adding the Authorization header to outbound REST API requests.
@@ -48,9 +48,7 @@ public class FHIRBasicAuthenticator implements ClientRequestFilter {
         this.password = password;
     }
 
-    /* (non-Javadoc)
-     * @see javax.ws.rs.client.ClientRequestFilter#filter(javax.ws.rs.client.ClientRequestContext)
-     * 
+    /**
      * This method is called by the JAX-RS client runtime and will add an Authorization header to the
      * outbound REST API request to supply the necessary basic auth security token.
      */
@@ -59,7 +57,7 @@ public class FHIRBasicAuthenticator implements ClientRequestFilter {
         if (getUsername() != null && !getUsername().isEmpty()) {
             MultivaluedMap<String, Object> headers = ctxt.getHeaders();
             String basicAuthToken = getUsername() + ":" + getPassword();
-            String basicAuthString = "Basic " + DatatypeConverter.printBase64Binary(basicAuthToken.getBytes());
+            String basicAuthString = "Basic " + Base64.getEncoder().encodeToString(basicAuthToken.getBytes());
             headers.add("Authorization", basicAuthString);  
         }
     }
